Fixed MRSC image alignment in navbar. Moved center attribute to css.

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -5,7 +5,7 @@ body {
 
 // Change the default padding so that the MRSC logo fits inside the toolbar
 .navbar-brand {
-  padding: 1px;
+  padding: 2px;
 }
 
 // application container
