--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -30,6 +30,7 @@
   z-index: 100;
   position: absolute;
   color: white;
+  text-align: center;
   // font-size:36px;
   // font-weight: bold;
   left: 10px;
